--- a/parameters/make_folds.env
+++ b/parameters/make_folds.env
@@ -4,12 +4,16 @@ QUEEN_MATRIX=H:\Google Drive\Doutorado\EFD\data\Brazil\IBGE\meshblocks\2010\proc
 MESHBLOCK=H:\Google Drive\Doutorado\EFD\data\Brazil\IBGE\meshblocks\2010\processed\city\shapefiles\Brazil.shp
 OUTPUT_PATH=H:\Google Drive\Doutorado\EF-FS_Pipeline
 
-# Type of folds [Region=R, State=S, Meso=Me, Micro=Mi, District=D, Sub-District=SD, Changing Neighborhood=CN ]
+# ================== Folds Parameters===== ========================
+# Region=R, State=S, Meso=Me, Micro=Mi, District=D, Sub-District=SD, Changing Neighborhood=CN
 TYPE_FOLDS=CN
 # Chaging Neighborhood parameters
 C_N_NEIGHBORS=5
+# Haddad or Bolsonaro
 CENTER_CANDIDATE=HADDAD
-FILTER_TRAIN=FALSE
+# True or False
+FILTER_TRAIN=True
+
 # ================== Input Dataset Details ========================
 REGION_NAME=Brazil
 AGGR_LEVEL=city
