--- a/parameters/make_folds.env
+++ b/parameters/make_folds.env
@@ -12,7 +12,7 @@ C_N_NEIGHBORS=5
 # Haddad or Bolsonaro
 CENTER_CANDIDATE=HADDAD
 # True or False
-FILTER_TRAIN=False
+FILTER_TRAIN=True
 
 # ================== Input Dataset Details ========================
 REGION_NAME=Brazil
