--- a/parameters/spatial_cross_validation.env
+++ b/parameters/spatial_cross_validation.env
@@ -6,7 +6,7 @@ TYPE_FOLDS=CN
 # =========== Changing Neighborhood parameters ====================
 C_N_NEIGHBORS=5
 CENTER_CANDIDATE=HADDAD
-FILTER_TRAIN=False
+FILTER_TRAIN=True
 # ============== Feature selection parameters =====================
 TARGET=LISA
 # FILTERING_N_FEATURES = -1 [CFS n_features]
