--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,103 @@
-# local package
--e .
-
-# external requirements
-click
-Sphinx
-coverage
-awscli
-flake8
-python-dotenv>=0.5.1
+appdirs @ file:///home/conda/feedstock_root/build_artifacts/appdirs_1603108395799/work
+arrow @ file:///D:/bld/arrow_1610483896970/work
+attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1605083924122/work
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backports.functools-lru-cache==1.6.1
+binaryornot==0.4.4
+branca @ file:///home/conda/feedstock_root/build_artifacts/branca_1609346930842/work
+brotlipy==0.7.0
+certifi==2020.12.5
+cffi @ file:///D:/bld/cffi_1613414140225/work
+chardet @ file:///D:/bld/chardet_1610093646853/work
+click==7.1.2
+click-plugins==1.1.1
+cligj @ file:///home/conda/feedstock_root/build_artifacts/cligj_1605902088619/work
+cloudpickle @ file:///home/conda/feedstock_root/build_artifacts/cloudpickle_1598400192773/work
+colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1602866480661/work
+coloredlogs==15.0
+cookiecutter==1.7.2
+cryptography @ file:///D:/bld/cryptography_1612993898605/work
+cycler==0.10.0
+cytoolz==0.11.0
+dask @ file:///home/conda/feedstock_root/build_artifacts/dask-core_1612568682000/work
+decorator==4.4.2
+descartes==1.1.0
+Fiona==1.8.18
+folium @ file:///home/conda/feedstock_root/build_artifacts/folium_1609967009544/work
+GDAL==3.1.4
+geopandas @ file:///home/conda/feedstock_root/build_artifacts/geopandas_1611609867122/work
+humanfriendly @ file:///D:/bld/humanfriendly_1607568942197/work
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1593328102638/work
+imagecodecs @ file:///D:/bld/imagecodecs_1610511398834/work
+imageio @ file:///home/conda/feedstock_root/build_artifacts/imageio_1594044661732/work
+ipython @ file:///D:/bld/ipython_1612487178473/work
+ipython-genutils==0.2.0
+javabridge==1.0.19
+jedi @ file:///D:/bld/jedi_1610146948662/work
+Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1612119311452/work
+jinja2-time==0.2.0
+joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1607956439537/work
+kiwisolver @ file:///D:/bld/kiwisolver_1610099948875/work
+lightgbm @ file:///D:/bld/lightgbm_1607449972796/work
+llvmlite==0.35.0
+MarkupSafe @ file:///D:/bld/markupsafe_1610127683324/work
+matplotlib @ file:///D:/bld/matplotlib-base_1594091905736/work
+munch==2.5.0
+networkx @ file:///home/conda/feedstock_root/build_artifacts/networkx_1598210780226/work
+numba @ file:///D:/bld/numba_1607010604208/work
+numpy @ file:///D:/bld/numpy_1612953165809/work
+olefile @ file:///home/conda/feedstock_root/build_artifacts/olefile_1602866521163/work
+osmnx @ file:///home/conda/feedstock_root/build_artifacts/osmnx_1610570411916/work
+packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1612459636436/work
+pandas @ file:///D:/bld/pandas_1612886850552/work
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1607618318316/work
+patsy==0.5.1
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+Pillow @ file:///D:/bld/pillow_1612816880428/work
+pooch @ file:///home/conda/feedstock_root/build_artifacts/pooch_1606467285986/work
+poyo==0.5.0
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1613068548426/work
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1613412098605/work
+pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1608055815057/work
+pyparsing==2.4.7
+pyproj @ file:///D:/bld/pyproj_1604702648085/work
+PyQt5==5.12.3
+PyQt5-sip==4.19.18
+PyQtChart==5.12
+PyQtWebEngine==5.12.1
+pyreadline @ file:///D:/bld/pyreadline_1611175364000/work
+PySocks @ file:///D:/bld/pysocks_1610291742246/work
+python-dateutil==2.8.1
+python-dotenv @ file:///home/conda/feedstock_root/build_artifacts/python-dotenv_1603979006023/work
+python-slugify @ file:///home/conda/feedstock_root/build_artifacts/python-slugify_1593573453419/work
+python-weka-wrapper3==0.1.16
+pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1612179539967/work
+PyWavelets @ file:///D:/bld/pywavelets_1607290958158/work
+PyYAML==5.4.1
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1608156231189/work
+Rtree @ file:///D:/bld/rtree_1610147302815/work
+scikit-image==0.18.1
+scikit-learn @ file:///D:/bld/scikit-learn_1611079981849/work
+scikit-posthocs @ file:///home/conda/feedstock_root/build_artifacts/scikit-posthocs_1602551305540/work
+scipy @ file:///C:/bld/scipy_1609458016927/work
+seaborn @ file:///tmp/build/80754af9/seaborn_1600553570093/work
+shap @ file:///D:/bld/shap_1608143581229/work
+Shapely==1.7.1
+six @ file:///home/conda/feedstock_root/build_artifacts/six_1590081179328/work
+slicer @ file:///home/conda/feedstock_root/build_artifacts/slicer_1608146800664/work
+-e git+https://github.com/tpinhoda/EF-FS_Pipeline.git@1c70f7259c9592985d3a917ae577058c1727b9d7#egg=src
+statsmodels @ file:///D:/bld/statsmodels_1612273760174/work
+text-unidecode==1.3
+threadpoolctl @ file:///tmp/tmp79xdzxkt/threadpoolctl-2.1.0-py3-none-any.whl
+tifffile @ file:///home/conda/feedstock_root/build_artifacts/tifffile_1612264465539/work
+toolz @ file:///home/conda/feedstock_root/build_artifacts/toolz_1600973991856/work
+tornado @ file:///D:/bld/tornado_1610094858390/work
+tqdm @ file:///home/conda/feedstock_root/build_artifacts/tqdm_1610419111160/work
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1602771532708/work
+Unidecode @ file:///home/conda/feedstock_root/build_artifacts/unidecode_1612533191922/work
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1611695416663/work
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
+whichcraft==0.6.1
+win-inet-pton @ file:///D:/bld/win_inet_pton_1610147566231/work
+wincertstore==0.2
