--- a/parameters/make_plots.env
+++ b/parameters/make_plots.env
@@ -6,9 +6,9 @@ TYPE_FOLDS=CN
 # =========== Changing Neighborhood parameters ====================
 C_N_NEIGHBORS=5
 CENTER_CANDIDATE=HADDAD
-FILTER_TRAIN=True
+FILTER_TRAIN=False
 # ============== Feature selection parameters =====================
-TARGET=LISA
+TARGET=ELECTION_FERNANDO HADDAD(%)
 # FILTERING_N_FEATURES = -1 [CFS n_features]
 FILTERING_N_FEATURES=-1
 RANDOM_PERC=50
