--- a/parameters/make_plots.env
+++ b/parameters/make_plots.env
@@ -5,10 +5,10 @@ EXP_PATH=H:\Google Drive\Doutorado\EF-FS_Pipeline\Brazil_city_E2018t2PresidenteP
 TYPE_FOLDS=CN
 # =========== Changing Neighborhood parameters ====================
 C_N_NEIGHBORS=5
-CENTER_CANDIDATE=HADDAD
+CENTER_CANDIDATE=BOLSONARO
 FILTER_TRAIN=False
 # ============== Feature selection parameters =====================
-TARGET=ELECTION_FERNANDO HADDAD(%)
+TARGET=ELECTION_JAIR BOLSONARO(%)
 # FILTERING_N_FEATURES = -1 [CFS n_features]
 FILTERING_N_FEATURES=-1
 RANDOM_PERC=50
