--- a/parameters/modules_parameters.env
+++ b/parameters/modules_parameters.env
@@ -4,17 +4,28 @@ QUEEN_MATRIX=H:\Google Drive\Doutorado\EFD\data\Brazil\IBGE\meshblocks\2010\proc
 MESHBLOCK=H:\Google Drive\Doutorado\EFD\data\Brazil\IBGE\meshblocks\2010\processed\city\shapefiles\Brazil.shp
 OUTPUT_PATH=H:\Google Drive\Doutorado\EF-FS_Pipeline
 
-# ================== Folds Parameters===== ========================
+# ================== Make Folds Parameters===== ========================
 # Region=R, State=S, Meso=Me, Micro=Mi, District=D, Sub-District=SD, Changing Neighborhood=CN
-TYPE_FOLDS=CN
+TYPE_FOLDS=S
 # Chaging Neighborhood parameters
 C_N_NEIGHBORS=5
 # Haddad or Bolsonaro
-CENTER_CANDIDATE=BOLSONARO
+CENTER_CANDIDATE=HADDAD
 # True or False
-FILTER_TRAIN=False
+FILTER_TRAIN=True
+
+# ============== Feature selection parameters =====================
+TARGET=ELECTION_FERNANDO HADDAD(%)
+# FILTERING_N_FEATURES = -1 [CFS n_features]
+FILTERING_N_FEATURES=-1
+RANDOM_PERC=50
+
+# ========= Spatial Cross Validation parameters ===================
+# LR = LINEAR REGRESSION, LGBM = Gradient Boosting
+MODEL_NAME=LGBM
 
 # ================== Input Dataset Details ========================
+INDEX_COL=GEO_Cod_Municipio
 REGION_NAME=Brazil
 AGGR_LEVEL=city
 # Election Data
