--- a/parameters/modules_parameters.env
+++ b/parameters/modules_parameters.env
@@ -10,12 +10,12 @@ TYPE_FOLDS=S
 # Chaging Neighborhood parameters
 C_N_NEIGHBORS=5
 # Haddad or Bolsonaro
-CENTER_CANDIDATE=HADDAD
+CENTER_CANDIDATE=BOLSONARO
 # True or False
 FILTER_TRAIN=True
 
 # ============== Feature selection parameters =====================
-TARGET=ELECTION_FERNANDO HADDAD(%)
+TARGET=ELECTION_JAIR BOLSONARO(%)
 # FILTERING_N_FEATURES = -1 [CFS n_features]
 FILTERING_N_FEATURES=-1
 RANDOM_PERC=50
