--- a/parameters/pipeline_modules.env
+++ b/parameters/pipeline_modules.env
@@ -6,9 +6,9 @@ RUN_FEATURE_SELECTION_BASELINES=False
 
 #Spatial Cross Validation module (True or False)
 RUN_MODEL_TRAIN=False
-RUN_MODEL_PREDICT=True
+RUN_MODEL_PREDICT=False
 
 #Visualization module (True or False)
-RUN_GENERAL_PLOTS=True
+RUN_GENERAL_PLOTS=False
 RUN_MAP_PLOTS=True
 RUN_SHAP_PLOTS=False
