added worst cases

--- a/parameters/pipeline_modules.env
+++ b/parameters/pipeline_modules.env
@@ -5,10 +5,10 @@ RUN_MAKE_FOLDS=False
 RUN_FEATURE_SELECTION_BASELINES=False
 
 #Spatial Cross Validation module (True or False)
-RUN_MODEL_TRAIN=False
-RUN_MODEL_PREDICT=False
+RUN_MODEL_TRAIN=True
+RUN_MODEL_PREDICT=True
 
 #Visualization module (True or False)
-RUN_GENERAL_PLOTS=False
+RUN_GENERAL_PLOTS=True
 RUN_MAP_PLOTS=True
 RUN_SHAP_PLOTS=False
