--- a/parameters/modules_parameters.env
+++ b/parameters/modules_parameters.env
@@ -5,24 +5,19 @@ MESHBLOCK=H:\Google Drive\Doutorado\EFD\data\Brazil\IBGE\meshblocks\2010\process
 OUTPUT_PATH=H:\Google Drive\Doutorado\EF-FS_Pipeline
 
 # ================== Make Folds Parameters===== ========================
-# Region=R, State=S, Meso=Me, Micro=Mi, District=D, Sub-District=SD, Changing Neighborhood=CN
-TYPE_FOLDS=S
+TYPE_FOLDS=S # Region=R, State=S, Meso=Me, Micro=Mi, District=D, Sub-District=SD, Changing Neighborhood=CN
 # Chaging Neighborhood parameters
-C_N_NEIGHBORS=5
-# Haddad or Bolsonaro
-CENTER_CANDIDATE=BOLSONARO
-# True or False
-FILTER_TRAIN=True
+C_N_NEIGHBORS=5 
+CENTER_CANDIDATE=BOLSONARO # Haddad or Bolsonaro
+FILTER_TRAIN=True # True or False
 
 # ============== Feature selection parameters =====================
+INDEPENDENT=False
 TARGET=ELECTION_JAIR BOLSONARO(%)
-# FILTERING_N_FEATURES = -1 [CFS n_features]
-FILTERING_N_FEATURES=-1
-RANDOM_PERC=50
+FILTERING_N_FEATURES=-1 # FILTERING_N_FEATURES = -1 [CFS n_features]
 
 # ========= Spatial Cross Validation parameters ===================
-# LR = LINEAR REGRESSION, LGBM = Gradient Boosting
-MODEL_NAME=LGBM
+MODEL_NAME=LGBM # LR = LINEAR REGRESSION, LGBM = Gradient Boosting
 
 # ================== Input Dataset Details ========================
 INDEX_COL=GEO_Cod_Municipio
