Created feature selection dependet pipeline

--- a/parameters/pipeline_modules.env
+++ b/parameters/pipeline_modules.env
@@ -2,11 +2,11 @@
 RUN_MAKE_FOLDS=False
 
 #Feature selection moudule {True or False}
-RUN_FEATURE_SELECTION_BASELINES=True
+RUN_FEATURE_SELECTION_BASELINES=False
 
 #Spatial Cross Validation module (True or False)
 RUN_MODEL_TRAIN=False
-RUN_MODEL_PREDICT=False
+RUN_MODEL_PREDICT=True
 
 #Visualization module (True or False)
 RUN_GENERAL_PLOTS=False
