Fix maplot visual bugs Fixes #3

--- a/parameters/modules_parameters.env
+++ b/parameters/modules_parameters.env
@@ -17,7 +17,7 @@ TARGET=ELECTION_JAIR BOLSONARO(%)
 FILTERING_N_FEATURES=-1 # FILTERING_N_FEATURES = -1 [CFS n_features]
 
 # ========= Spatial Cross Validation parameters ===================
-MODEL_NAME=GWR # LR = LINEAR REGRESSION, LGBM = Gradient Boosting
+MODEL_NAME=LGBM # LR = LINEAR REGRESSION, LGBM = Gradient Boosting
 
 # ================== Input Dataset Details ========================
 INDEX_COL=GEO_Cod_Municipio
