--- a/parameters/modules_parameters.env
+++ b/parameters/modules_parameters.env
@@ -3,21 +3,27 @@ INPUT_DATASET=H:\Google Drive\Doutorado\HFS\data\Brazil\tse2018_ibge2010\Preside
 QUEEN_MATRIX=H:\Google Drive\Doutorado\EFD\data\Brazil\IBGE\meshblocks\2010\processed\city\filtered_adjacency_matrix.csv
 MESHBLOCK=H:\Google Drive\Doutorado\EFD\data\Brazil\IBGE\meshblocks\2010\processed\city\shapefiles\Brazil.shp
 OUTPUT_PATH=H:\Google Drive\Doutorado\EF-FS_Pipeline
+CENSUS_DESC=H:\Google Drive\Doutorado\EF-FS_Pipeline\_external\descricao_atributos_censo_2010.csv
 
 # ================== Make Folds Parameters===== ========================
 TYPE_FOLDS=S # Region=R, State=S, Meso=Me, Micro=Mi, District=D, Sub-District=SD, Changing Neighborhood=CN
+# If filter_data == True
+FILTER_DATA=False
+FILTER_ATTRIBUTE_NAME=GEO_Cod_Grande_Regiao
+FILTER_ATTRIBUTE_VALUE=1.0
 # Chaging Neighborhood parameters
-C_N_NEIGHBORS=5 
+GROUP_CN=S # Region=R, State=S, Meso=Me, Micro=Mi, District=D, Sub-District=SD, Changing Neighborhood=CN
+C_N_NEIGHBORS=1
 CENTER_CANDIDATE=BOLSONARO # Haddad or Bolsonaro
 FILTER_TRAIN=True # True or False
 
 # ============== Feature selection parameters =====================
-INDEPENDENT=False
+INDEPENDENT=True
 TARGET=ELECTION_JAIR BOLSONARO(%)
 FILTERING_N_FEATURES=-1 # FILTERING_N_FEATURES = -1 [CFS n_features]
 
 # ========= Spatial Cross Validation parameters ===================
-MODEL_NAME=LGBM # LR = LINEAR REGRESSION, LGBM = Gradient Boosting
+MODEL_NAME=CR # LR = LINEAR REGRESSION, LGBM = Gradient Boosting, KNN = K Nearest Neighbors, DT = Decision Tree
 
 # ================== Input Dataset Details ========================
 INDEX_COL=GEO_Cod_Municipio
