fix coments parameters

--- a/parameters/modules_parameters.env
+++ b/parameters/modules_parameters.env
@@ -6,7 +6,7 @@ OUTPUT_PATH=H:\Google Drive\Doutorado\EF-FS_Pipeline
 CENSUS_DESC=H:\Google Drive\Doutorado\EF-FS_Pipeline\_external\descricao_atributos_censo_2010.csv
 
 # ================== Make Folds Parameters===== ========================
-TYPE_FOLDS=S # Region=R, State=S, Meso=Me, Micro=Mi, District=D, Sub-District=SD, Changing Neighborhood=CN
+TYPE_FOLDS=S # Region=R, State=S, Meso=Me, Micro=MI, District=D, Sub-District=SD, Changing Neighborhood=CN
 # If filter_data == True
 FILTER_DATA=False
 FILTER_ATTRIBUTE_NAME=GEO_Cod_Grande_Regiao
