New fold generation (Contextual based)

--- a/parameters/modules_parameters.env
+++ b/parameters/modules_parameters.env
@@ -6,11 +6,12 @@ OUTPUT_PATH=H:\Google Drive\Doutorado\EF-FS_Pipeline
 CENSUS_DESC=H:\Google Drive\Doutorado\EF-FS_Pipeline\_external\descricao_atributos_censo_2010.csv
 
 # ================== Make Folds Parameters===== ========================
-TYPE_FOLDS=S # Region=R, State=S, Meso=Me, Micro=MI, District=D, Sub-District=SD, Changing Neighborhood=CN
+TYPE_FOLDS=GC #Changing Neighborhood=CN, Geographic Group - GG, CONtextual Group = CG
+GEO_GROUP=S # Region=R, State=S, Meso=Me, Micro=MI, District=D, Sub-District=SD
 # If filter_data == True
 FILTER_DATA=False
-FILTER_ATTRIBUTE_NAME=GEO_Cod_Grande_Regiao
-FILTER_ATTRIBUTE_VALUE=1.0
+FILTER_ATTRIBUTE_NAME=GEO_Nome_UF
+FILTER_ATTRIBUTE_VALUE=Tocantins
 # Chaging Neighborhood parameters
 GROUP_CN=S # Region=R, State=S, Meso=Me, Micro=Mi, District=D, Sub-District=SD, Changing Neighborhood=CN
 C_N_NEIGHBORS=5
@@ -18,12 +19,12 @@ CENTER_CANDIDATE=BOLSONARO # Haddad or Bolsonaro
 FILTER_TRAIN=True # True or False
 
 # ============== Feature selection parameters =====================
-INDEPENDENT=True
+INDEPENDENT=False
 TARGET=ELECTION_JAIR BOLSONARO(%)
 FILTERING_N_FEATURES=-1 # FILTERING_N_FEATURES = -1 [CFS n_features]
 
 # ========= Spatial Cross Validation parameters ===================
-MODEL_NAME=CR # LR = LINEAR REGRESSION, LGBM = Gradient Boosting, KNN = K Nearest Neighbors, DT = Decision Tree
+MODEL_NAME=LGBM # LR = LINEAR REGRESSION, LGBM = Gradient Boosting, KNN = K Nearest Neighbors, DT = Decision Tree
 
 # ================== Input Dataset Details ========================
 INDEX_COL=GEO_Cod_Municipio
