--- a/parameters/pipeline_modules.env
+++ b/parameters/pipeline_modules.env
@@ -1,13 +1,13 @@
 #Make folds module {True or False}
-RUN_MAKE_FOLDS=False
+RUN_MAKE_FOLDS=True
 
 #Feature selection moudule {True or False}
-RUN_FEATURE_SELECTION_BASELINES=False
+RUN_FEATURE_SELECTION_BASELINES=True
 
 #Spatial Cross Validation module (True or False)
-RUN_MODEL_TRAIN=False
+RUN_MODEL_TRAIN=True
 RUN_MODEL_PREDICT=True
 #Visualization module (True or False)
-RUN_GENERAL_PLOTS=True
-RUN_MAP_PLOTS=False
+RUN_GENERAL_PLOTS=False
+RUN_MAP_PLOTS=True
 RUN_SHAP_PLOTS=False
